--- a/fm/package.json
+++ b/fm/package.json
@@ -21,6 +21,12 @@
     "@angular/platform-browser-dynamic": "^17.3.8",
     "@angular/router": "^17.3.8",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@fullcalendar/angular": "^6.1.15",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/list": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "ag-charts-angular": "^9.3.1",
     "ag-grid-angular": "^31.3.2",
     "ag-grid-community": "^31.3.2",
