--- a/fm/angular.json
+++ b/fm/angular.json
@@ -36,7 +36,8 @@
               "node_modules/bootstrap/scss/bootstrap-utilities.scss"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.js"
+              "node_modules/bootstrap/dist/js/bootstrap.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           },
           "configurations": {
