--- a/fm/src/json/project.json
+++ b/fm/src/json/project.json
@@ -7,32 +7,26 @@
       "startDate": "2024-08-27",
       "voice": "s",
       "voicestartDate": "2024-08-22",
-      "voiceendDate": null,
       "coding": "mozhi",
       "codingstartDate": "2024-08-15",
       "codingendDate": null,
-      "asset": [
-        null
-      ],
-      "projectStatus": "Inactive",
+      "asset": [],
+      "projectStatus": "Completed",
       "id": "5cfe"
     },
     {
-      "id": "a178",
       "projectname": "yhn",
       "clientname": "ryhryh",
       "domain": "e6y",
       "startDate": "2024-08-08",
       "voice": "ergee",
       "voicestartDate": "2024-08-23",
-      "voiceendDate": null,
       "coding": "dg",
       "codingstartDate": "2024-08-28",
       "codingendDate": null,
-      "asset": [
-        null
-      ],
-      "projectStatus": "Inactive"
+      "asset": [],
+      "projectStatus": "Pending",
+      "id": "a178"
     }
   ]
 }
